--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 h1 {
-  font-family: Cursive;
+  font-family: Comic Sans, Comic Sans MS, Cursive;
 }
 </style>
 <title> First </title>
