--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
 <style>
 h1 {
-  font-family: Comic Sans, Comic Sans MS, Cursive;
+  color:red;
 }
 </style>
 <title> First </title>
 </head>
 <body>
-<h1> First </h1>
-<h2> Second </h2>
-<h3> Third </h3>
+<h1> ARTICLEhost </h1>
 </body>
 </html>
