--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
 h1 {
   color:red;
 }
+h4 {
+  color:red;
+}
 </style>
-<title> First </title>
+<title> ARTICLEhost </title>
 </head>
 <body>
 <h1> ARTICLEhost </h1>
+<hr>
+articles:<br>
+<p1 id="1"> </p1>
+<h3> create new </h3>
+<textarea id="userInput"> type article here. </textarea>
+<br>
+<h4> Note that all articles are going to be avaible to be edited after 12 hours </h4>
+<br>
+<button OnClick="submit()"> Submit </button>
+<script>
+function submit() {
+  var userInput = document.getElementById("userInput").value;
+  document.getElementById("1").innerHTML = userInput;
+}
+</script>
 </body>
 </html>
