--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@ h4 {
 <title> ARTICLEhost </title>
 </head>
 <body>
-<?php 
- $file = "vistors.txt"; 
-
- $handle = fopen($file, 'r+') ; 
-
- $data = fread($handle, 512) ; 
-
- $count = $data + 1;
- print "You are visitor ".$count; 
-?>
+<!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=6699765&style=0001&nbdigits=5&type=page&initCount=0" title="webs counters" Alt="webs counters"   border="0" >
+</a>                                        <br/>
+                                        <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="Total Count" 
+                                        target="_blank" style="font-family: sans-serif, Arial, Helvetica; 
+                                        font-size: 9px; color: #6D6C72; text-decoration: none ;"><strong>Total Count                                        </strong>
+                                        </a>   
 <h1> ARTICLEhost </h1>
 <hr>
 articles:<br>
