--- a/index.html
+++ b/index.html
@@ -12,15 +12,29 @@ h4 {
 <title> ARTICLEhost </title>
 </head>
 <body>
-  <?php 
-$fn = "visitors.txt"; 
-$file = fopen($fn, "w+"); 
-$size = filesize($fn); 
-
-if($_POST['addition']) fwrite($file, $_POST['addition']); 
-
-$text = fread($file, $size); 
-fclose($file); 
+<?
+if($_POST['Submit']){
+$open = fopen("textfile.txt","w+");
+$text = $_POST['update'];
+fwrite($open, $text);
+fclose($open);
+echo "File updated.<br />"; 
+echo "File:<br />";
+$file = file("textfile.txt");
+foreach($file as $text) {
+echo $text."<br />";
+}
+}else{
+$file = file("textfile.txt");
+echo "<form action=\"".$PHP_SELF."\" method=\"post\">";
+echo "<textarea Name=\"update\" cols=\"50\" rows=\"10\">";
+foreach($file as $text) {
+echo $text;
+} 
+echo "</textarea>";
+echo "<input name=\"Submit\" type=\"submit\" value=\"Update\" />\n
+</form>";
+}
 ?>
 <h1> ARTICLEhost </h1>
 <hr>
