--- a/index.html
+++ b/index.html
@@ -12,29 +12,14 @@ h4 {
 <title> ARTICLEhost </title>
 </head>
 <body>
-<?
-if($_POST['Submit']){
-$open = fopen("textfile.txt","w+");
-$text = $_POST['update'];
-fwrite($open, $text);
-fclose($open);
-echo "File updated.<br />"; 
-echo "File:<br />";
-$file = file("textfile.txt");
-foreach($file as $text) {
-echo $text."<br />";
+<php?
+$path = dirname(__FILE__).'/newfile.txt';
+$fp = fopen($path, 'a');
+if(!$fp){
+echo 'file is not opend';
 }
-}else{
-$file = file("textfile.txt");
-echo "<form action=\"".$PHP_SELF."\" method=\"post\">";
-echo "<textarea Name=\"update\" cols=\"50\" rows=\"10\">";
-foreach($file as $text) {
-echo $text;
-} 
-echo "</textarea>";
-echo "<input name=\"Submit\" type=\"submit\" value=\"Update\" />\n
-</form>";
-}
+fwrite($fp, 'this is simple text written');
+fclose($fp);
 ?>
 <h1> ARTICLEhost </h1>
 <hr>
