--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <DOCTYPE html>
+<?php
+$action = $_GET["action"];
+$myText = $_POST["mytext"];
+
+if($action = "save") {
+  file_put_contents($"mytext.txt", $myText);
+}
+?>
 <html>
 <head>
 <style>
@@ -18,9 +26,12 @@ articles:<br>
 <p1 id="1"> </p1>
 <h3> create new </h3>
 <br>
+<form action="?action=save" name="myform" method="post">
+<input type=text name="mytext">
+<input type="submit" value="save">
+</form
 <h4> Note that all articles are going to be avaible to be edited after 12 hours </h4>
 <br>
-<button OnClick="submit()"> Submit </button>
 <script>
 function submit() {
   var userInput = document.getElementById("userInput").value;
