--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ articles:<br>
 <p1 id="1"> </p1>
 <h3> create new </h3>
 <br>
-<form action="?action=save" name="myform" method="post">
+<form action="?action=save" name="myform" method="get">
 <input type=text name="mytext">
 <input type="submit" value="save">
 </form
