--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ $action = $_GET["action"];
 $myText = $_POST["mytext"];
 
 if($action = "save") {
-  file_put_contents($"mytext.txt", $myText);
+  file_put_contents($"visitors.txt", $myText);
 }
 ?>
 <html>
