--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
     <head>
     <style>
@@ -7,23 +7,33 @@
    }
    nav {
       color:purple; 
-      padding: 10px;
-      border-style:solid;
-      border-width: 2px;
-      border-color: purple;
-      background-color:black;
+      background-color:Black;
+      height:60px;
+      width:100%;
+      position:fixed;
+      top:0;
+      left:0;
+   }
+   :link {
+   color:red;
    }
     </style>
     <div class="head">
         <title>THE MAIN PAGE OF PURPLEGAMERFINLAND</title>
         <nav>
             <div>PURPLEGAMERFINLAND</div>
-            <a href="google.com">google</a>
+            <a href="https://steamcommunity.com/profiles/76561198186731549">steam</a>
             </div>
         </nav>
         </div>
     </head>
     <body>
-        
+      <div>
+      <br>
+      <br>
+      <br>
+      <details>nicknames:<br>Win'O Fin<br>jonnelafin<br>purplegamerfinland</details>
+      <p>this is the mainpage of PurpleGamerFinland</p>
     </body>
+      </div>
 </html>
