--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
    <html>
+      <head>
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </head>
       <body>
       	<a href="https://dl.dropboxusercontent.com/content_link/mPNatjgOQYmm043oCYQogExecCE0R5xuNxcnEjOPDUDD6eWoQDPOOSIoSjxNZn8R/file"> Mainpage </a>
           <hr>
